--- a/www/touspourun/config/packages/security.yaml
+++ b/www/touspourun/config/packages/security.yaml
@@ -16,7 +16,11 @@ security:
         main:
             lazy: true
             provider: app_user_provider
-
+            # ->configure the controller of security to be used for api platform it activate a security listener
+            json_login:
+                check_path: app_login
+                username_path: email
+                password_path: password
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
 
